--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
-    <title>Vite + React</title>
+    <link rel="icon" href="./src/assets/img/favicon.svg" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WaterTracker</title>
   </head>
   <body>
     <div id="root"></div>
